[package]
name = "padsynth"
version = "0.1.0"
authors = ["nyanpasu64 <nyanpasu64@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
hound = {git = "https://github.com/ruuda/hound.git", rev = "fa88d577f08370e915a5bb3af6b772de68c53e20"}
realfft = "0.3.0"
ron = "0.6.2"
rustfft = "4.0.0"
serde = "1.0.117"
structopt = {version = "0.3.20", default-features = false}
