[package]
name = "padsynth"
version = "0.1.0"
authors = ["nyanpasu64 <nyanpasu64@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
rand = "0.7.3"
rand_distr = "0.3.0"
rand_pcg = "0.2.1"
realfft = "0.3.0"
ron = "0.6.2"
rustfft = "4.0.0"
serde = {version = "1.0.117", features = ["derive"]}
structopt = {version = "0.3.20", default-features = false}
wav = "0.4.1"
