[package]
name = "padsynth"
version = "0.1.0"
authors = ["nyanpasu64 <nyanpasu64@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_pcg = "0.3.1"
realfft = "3.0.1"
ron = "0.8.0"
rustfft = "6.0.1"
serde = {version = "1.0.117", features = ["derive"]}
structopt = {version = "0.3.20", default-features = false}
wav = "1.0.0"
